package com.constructflow.service.observer;

public interface ActivityObserver {
    void onActivity(Activity activity);
}
