@startuml observer_singleton_activity_hub
title Observer + Singleton -- Global activity stream (ActivityHub)

skinparam classAttributeIconSize 0
skinparam backgroundColor white

enum ActivityHub <<singleton>> {
  INSTANCE
  - observers : List<ActivityObserver>
  + subscribe(observer : ActivityObserver)
  + unsubscribe(observer : ActivityObserver)
  + publish(activity : Activity)
  + subscriberCount() : int
  + clear()
}

interface ActivityObserver {
  + onActivity(activity : Activity)
}

class AuditLogObserver {
  + onActivity(activity)
  + register()
}

class DashboardCounterObserver {
  - counters : Map<String, AtomicLong>
  + onActivity(activity)
  + countOf(type : String) : long
  + snapshot() : Map<String, Long>
}

class OverdueAlertObserver {
  + onActivity(activity)
}

interface Activity <<sealed>> {
  + at() : LocalDateTime
}

class TaskCreated <<record>>
class TaskCompleted <<record>>
class TaskOverdue <<record>>
class ResourceAllocated <<record>>
class CommentPosted <<record>>

class TaskService <<publisher>>
class ResourceService <<publisher>>
class AnnouncementCommentService <<publisher>>

ActivityObserver <|.. AuditLogObserver
ActivityObserver <|.. DashboardCounterObserver
ActivityObserver <|.. OverdueAlertObserver

Activity <|.. TaskCreated
Activity <|.. TaskCompleted
Activity <|.. TaskOverdue
Activity <|.. ResourceAllocated
Activity <|.. CommentPosted

ActivityHub o--> ActivityObserver

TaskService ..> ActivityHub
ResourceService ..> ActivityHub
AnnouncementCommentService ..> ActivityHub

note right of ActivityHub
  Enum-based Singleton (Effective Java, Item 3):
  - single instance guaranteed by the JVM
  - thread-safe without synchronization
  - immune to reflection and serialisation attacks
end note

@enduml
